# app/Http/Resources/WeightResource.php
@@ -5,8 +5,24 @@ namespace App\Http\Resources;
 use Carbon\Carbon;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * Weight Resource
+ * @author Satya Wibawa <i.g.b.n.satyawibawa@gmail.com>
+ * @package Resource
+ *
+ * @OA\Schema(
+ *      title="Weight Resource",
+ *      description="Weight resource",
+ * )
+ */
 class WeightResource extends JsonResource
 {
+    /**
+     * @OA\Property(property="id", type="integer", description="Id of collection", readOnly="true", example=1)
+     * @OA\Property(property="weight", type="number", format="float", description="Weight", readOnly="true", example=53.02)
+     * @OA\Property(property="microtime", type="integer", description="Microtime format", readOnly="true", example=1619453606584)
+     * @OA\Property(property="datetime", type="string", format="date-time", description="Date time format", readOnly="true", example="2021-04-27 00:13:26")
+     */
     /**
      * Transform the resource into an array.
      *
